content overflow errors fixed

--- a/source/sass/blocks/about-catalog.scss
+++ b/source/sass/blocks/about-catalog.scss
@@ -178,18 +178,19 @@
 
 @media (min-width: $desktop-width) {
   .about-catalog {
-    margin-bottom: 43px;
+    margin-bottom: 0;
   }
 
   .about-catalog__wrapper {
     width: 1220px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 
   .about-catalog__item {
     width: 570px;
-    margin-bottom: 30px;
+    margin-bottom: 73px;
     padding: 76px 56px 62px 52px;
     min-height: 372px;
 
