--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -113,7 +113,7 @@
     content: "";
     width: 100%;
     height: 3px;
-    top: 14px;
+    top: 21px;
     background-color: $main-green;
     z-index: -1;
   }
@@ -305,7 +305,7 @@
 .form__button {
   border: none;
   font-size: 16px;
-  padding-top: 0;
+  padding-top: 11px;
   margin-bottom: 20px;
 }
 
@@ -500,7 +500,7 @@
 
   .form__button {
     width: 283px;
-    height: 52px;
+    min-height: 52px;
     font-size: 20px;
     margin-bottom: 73px;
   }
@@ -585,16 +585,20 @@
     width: 1220px;
     padding: 0;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    margin-bottom: 60px;
+    flex-wrap: wrap;
+    justify-content: normal;
+    margin-bottom: 18px;
   }
 
   .form__additionally-item {
-    width: 245px;
-    margin-bottom: 10px;
+    width: 325px;
+    margin-bottom: 52px;
     margin-right: 0;
     padding-left: 60px;
+  }
+
+  .form__additionally-item:nth-child(4n) {
+    width: 245px;
   }
 
   .form__button {
