--- a/source/sass/blocks/intro-program.scss
+++ b/source/sass/blocks/intro-program.scss
@@ -42,6 +42,7 @@
     position: relative;
     padding-bottom: 490px;
     margin-bottom: 38px;
+    max-height: 772px;
   }
 
   .intro-program .container {
@@ -80,10 +81,11 @@
   .intro-program__button {
     margin-left: 89px;
     width: 245px;
-    height: 52px;
+    min-height: 52px;
     font-size: 20px;
     line-height: 20px;
     padding-top: 16px;
+    padding-bottom: 16px;
   }
 
   .intro-program__image {
@@ -99,6 +101,7 @@
   .intro-program {
     padding-bottom: 187px;
     width: 1220px;
+    max-height: 474px;
     margin: 95px auto 80px auto;
   }
 
